[project]
name = "pyhtmltopdf"
version = "1.0.0"
authors = [
    { name = "lennyerik" },
]
description = "A simple python library for making PDF files from HTML using chromium"
readme = "README.md"
dependencies = [
    "pyppeteer",
]

[project.optional-dependencies]
dev = [
    "black",
    "PyPDF2"
]
