[project]
name = "pyhtmltopdf"
version = "1.1.0"
requires-python=">=3.9"
authors = [
    { name = "lennyerik" },
]
description = "A simple python library for making PDF files from HTML using chromium"
readme = "README.md"
dependencies = [
    "playwright",
]

[project.optional-dependencies]
dev = [
    "black",
    "PyPDF2"
]
